--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 .container {
   background-color: #283618;
-  height: 200px;
+  height: 220px;
 }
 
 .nav {
@@ -27,16 +27,13 @@ h1 {
   font-weight: 500;
   letter-spacing: 2px;
   padding-top: 50px;
-  padding-left: 250px;
-}
-
-h1,
-p {
+  padding-left: 20%;
   text-align: center;
 }
 
 .nav .paragraph {
   font-size: 20px;
+  white-space: nowrap;
 }
 
 @media screen and (max-width: 500px) {
@@ -49,8 +46,12 @@ p {
   .logo {
     width: 100px;
   }
+  .paragraph {
+    font-size: 10px;
+  }
   h1 {
-    font-size: 50px;
+    font-size: 30px;
+    color: aquamarine;
   }
 }
 
@@ -72,12 +73,13 @@ body {
 /*--contact form--*/
 
 .bodycontainer {
+  margin-top: 20px;
   display: flex;
   height: 700px;
   width: 600px;
   background-color: #f7f7f2;
   font-weight: 600;
-  margin-left: 31%;
+  margin-left: 28%;
 
   box-shadow: 5px 10px 18px rgba(147, 31, 29, 0.5);
 }
